--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,3 +70,20 @@ header {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+.saveBtn.saved {
+  background-color: red;
+}
+#bg-wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+#bg-wrap svg {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
